plugins {
    id 'application'
    id 'java'
    id 'io.freefair.lombok' version '6.0.0-m2'
}

compileJava.options.encoding = 'UTF-8'
javadoc.options.encoding = 'UTF-8'
apply plugin: 'java'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
version = '1.0.0'

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    implementation 'ch.qos.logback:logback-classic:1.2.10'
    implementation 'ch.qos.logback:logback-core:1.2.10'
    implementation 'org.slf4j:slf4j-api:1.7.32'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.14.2'
}

application {
    mainClass = 'mochotexto.App'
}
